# git-prompt-watcher

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  git-prompt-watcher.plugin.zsh  justfile  pyproject.toml  renovate.json
.github/workflows/: test.yaml
tests/: Dockerfile  git_prompt_watcher_tests.rs  pyproject.toml  starship.toml  test_git_prompt_watcher.py
