[package]
name = "git-prompt-watcher"
version = "0.1.0"
edition = "2024"
description = "A zsh plugin that watches git repositories for changes and updates shell prompts automatically"
license = "Apache-2.0"
repository = "https://github.com/shields/git-prompt-watcher"
readme = "README.md"
keywords = ["zsh", "git", "shell", "prompt", "watcher"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
git2 = "0.20"
tempfile = "3.0"
sysinfo = "0.37"
nix = { version = "0.30", features = ["signal", "process"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
expectrl = "=0.7.1"
assert_cmd = "=2.0.17"
predicates = "=3.1.3"
