# There isn't actually a Python project here. We just use Python as a test harness.
[project]
name = "git-prompt-watcher"
version = "0"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "gitpython>=3.1.44",
    "pexpect>=4.9.0",
    "psutil>=7.0.0",
    "pytest>=8.4.1",
    "ruff>=0.8.0",
]
