# There isn't actually a Python project here. We just use Python as a test harness.
[project]
name = "git-prompt-watcher"
version = "0"
requires-python = ">=3.13"

# Using PEP 621 format instead of PEP 735 [dependency-groups] because
# Renovate's pep621 manager doesn't support dependency-groups yet
[project.optional-dependencies]
dev = [
    "gitpython>=3.1.44",
    "pexpect>=4.9.0",
    "psutil>=7.0.0",
    "pytest>=8.4.1",
    "pytest-xdist>=3.6.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "C90",     # Cyclomatic complexity
  "COM812",  # Trailing commas; conflicts with formatter
  "PLR09",   # "Too many" branches, arguments, etc.
  "RUF001",  # String contains ambiguous Unicode characters
  "S101",    # Use of `assert`, which is key to pytest
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pty",
]
